# synaptic-graph

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh
docs/: PRD.md  TRD.md  architecture.md  philosophy.md  roadmap.md  vision.md
docs/integrations/: assistant-client.md
docs/source-notes/: graph-memory.md
docs/superpowers/plans/: 2026-04-14-phase1-memory-service.md  2026-04-14-phase2-ghost-graphs.md  2026-04-14-phase3-sync-portability.md  2026-04-14-phase4-test-hardening.md  2026-04-14-phase5-tauri-ui.md  2026-04-15-remaining-roadmap.md  2026-04-16-phase10-cloud-sync.md  2026-04-21-phase11-reflective-retrieval-and-procedural-skills.md
docs/superpowers/specs/: 2026-04-14-tauri-ui-design.md  (+1 more)
src/: activation.rs  assessments.rs  backup.rs  confidence.rs  db.rs  evidence.rs  extraction.rs  graph.rs  ingestion.rs  lib.rs  main.rs  markdown.rs  models.rs  redaction.rs  reflection.rs  server.rs  session.rs  sync.rs  weight.rs
src/ghost/: mod.rs  pull.rs  scanner.rs
tests/: test_activation.rs  test_backup.rs  test_db.rs  test_extraction.rs  test_ghost.rs  test_ingestion.rs  test_markdown.rs  test_mcp.rs  test_mcp_handshake.sh  test_pull.rs  test_redaction.rs  test_session.rs  test_sync.rs  test_validation.rs  test_validation_p2.rs  test_validation_p3.rs  test_weight.rs
tests/common/: mod.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.svelte  app.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: commands.rs  main.rs
ui/src/lib/: api.ts  (+14 more)
(+9 files in other folders)
