[package]
name = "synaptic-graph"
version = "0.1.0"
edition = "2021"
description = "A portable, human-memory-inspired memory layer for AI systems"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
pulldown-cmark = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
