[package]
name = "memory-graph-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
synaptic-graph = { path = "../.." }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
